--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,11 +5,13 @@
     "plugin:@typescript-eslint/recommended",
     "plugin:import/errors",
     "plugin:import/warnings",
-    "plugin:import/typescript"
+    "plugin:import/typescript",
+    "plugin:prettier/recommended"
   ],
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint", "import"],
   "rules": {
+    "prettier/prettier": "error",
     "no-var": "error",
     "prefer-const": "error",
     "@typescript-eslint/explicit-function-return-type": "error",
