--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ NEXT_PUBLIC_API_ROOT=
 NEXT_PUBLIC_GOOGLE_AUTH_REDIRECT_URL=
 NEXT_PUBLIC_DISCORD_AUTH_REDIRECT_URl=
 
+/* Facebook OAuth */
+NEXT_PUBLIC_FACEBOOK_AUTH_REDIRECT_URL=
