--- a/package.json
+++ b/package.json
@@ -10,23 +10,28 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.6.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "antd": "^5.18.0",
+    "dayjs": "^1.11.11",
     "lint-staged": "^15.2.5",
     "next": "14.2.3",
     "prettier-plugin-sort-imports": "^1.8.5",
     "qs": "^6.12.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sass": "^1.77.6"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
-    "@types/node": "^20",
+    "@types/node": "20.14.9",
     "@types/qs": "^6.9.15",
-    "@types/react": "^18",
+    "@types/react": "18.3.3",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.1.0",
