--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,10 @@
   ],
   "rules": {
     "no-console": "error",
+    "@typescript-eslint/interface-name-prefix": "off",
+    "@typescript-eslint/array-type": "error",
+    "@typescript-eslint/ban-ts-comment": "error",
+    "@typescript-eslint/no-inferrable-types": "error",
     "prettier/prettier": [
       "error",
       {
@@ -27,7 +31,13 @@
     "@typescript-eslint/typedef": [
       "error",
       {
-        "variableDeclaration": true,
+        "arrayDestructuring": false,
+        "arrowParameter": false,
+        "memberVariableDeclaration": false,
+        "objectDestructuring": false,
+        "parameter": true,
+        "propertyDeclaration": true,
+        "variableDeclaration": false,
         "variableDeclarationIgnoreFunction": true
       }
     ],
