--- a/package.json
+++ b/package.json
@@ -3,21 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "npx npm-check-updates @novatoriteam/validators -u && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.6.0",
+    "@novatoriteam/validators": "0.0.6",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "antd": "^5.18.0",
+    "dotenv": "^16.4.5",
     "lint-staged": "^15.2.5",
     "next": "14.2.3",
     "prettier-plugin-sort-imports": "^1.8.5",
     "qs": "^6.12.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sass": "^1.77.6"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
