feat: bnet auth

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,6 @@
-/* API */
 NEXT_PUBLIC_API_ROOT=
-
-/* Google OAuth */
 NEXT_PUBLIC_GOOGLE_AUTH_REDIRECT_URL=
 NEXT_PUBLIC_DISCORD_AUTH_REDIRECT_URL=
-
-/* Facebook OAuth */
 NEXT_PUBLIC_FACEBOOK_AUTH_REDIRECT_URL=
+NEXT_PUBLIC_BNET_AUTH_REDIRECT_URL=
+NEXT_PUBLIC_GITHUB_AUTH_REDIRECT_URL=
