--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ NEXT_PUBLIC_DISCORD_AUTH_REDIRECT_URL=
 NEXT_PUBLIC_FACEBOOK_AUTH_REDIRECT_URL=
 NEXT_PUBLIC_BNET_AUTH_REDIRECT_URL=
 NEXT_PUBLIC_GITHUB_AUTH_REDIRECT_URL=
+NEXT_PUBLIC_STEAM_AUTH_REDIRECT_URL=
