--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@nestjs/mapped-types": "^2.0.5",
     "@novatoriteam/validators": "latest",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "antd": "^5.18.0",
+    "antd": "^5.19.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dayjs": "^1.11.11",
@@ -25,6 +25,8 @@
     "qs": "^6.12.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.1",
+    "react-otp-input": "^3.1.1",
     "sass": "^1.77.6"
   },
   "devDependencies": {
