--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dayjs": "^1.11.11",
+    "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
     "lint-staged": "^15.2.5",
     "next": "14.2.3",
